--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,7 +1,7 @@
 apiVersion: "1"
 version: "1"
 id: "mpolak-devopsworld-ops-controller"
-description: "CloudBees CI configuration bundle for the mpolak-devopsworld ops-controller Controllers"
+description: "CloudBees CI configuration bundle for the mpolak-devopsworld ops-controller Controller"
 jcasc:
   - "jenkins.yaml"
 plugins:
