--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,7 +1,7 @@
 apiVersion: "1"
 version: "4"
 id: "cbci-casc-workshop-ops-controller"
-description: "CloudBees CI configuration bundle for the cbci-casc-workshop ops-controller Controllers d"
+description: "CloudBees CI configuration bundle for the cbci-casc-workshop ops-controller Controllers"
 parent: "base"
 jcasc:
   - "jcasc/credentials.yaml"
